--- a/webpage.html
+++ b/webpage.html
@@ -188,7 +188,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <a href="#admission" class="admission-btn">Admission</a>
+        <!-- Linking to admission.html -->
+        <a href="admission.html" class="admission-btn">Admission</a>
     </header>
 
     <!-- Hero Section -->
