--- a/index.html
+++ b/index.html
@@ -3,167 +3,248 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Futuristic Login Page</title>
+    <title>Futuristic School Website</title>
     <style>
         body {
             margin: 0;
             padding: 0;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+            color: white;
+            overflow-x: hidden;
+        }
+
+        header {
+            width: 100%;
+            height: 80px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 50px;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        header .logo {
+            font-size: 24px;
+            font-weight: bold;
+            color: #00ff99;
+        }
+
+        header nav ul {
+            list-style: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+        }
+
+        header nav ul li {
+            margin: 0 20px;
+        }
+
+        header nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            transition: color 0.3s ease;
+        }
+
+        header nav ul li a:hover {
+            color: #00ff99;
+        }
+
+        .header-buttons {
+            display: flex;
+            gap: 15px;
+        }
+
+        .header-buttons a {
+            padding: 10px 20px;
+            border-radius: 20px;
+            background: linear-gradient(90deg, #00ff99, #0066ff);
+            color: white;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background 0.3s ease;
+        }
+
+        .header-buttons a:hover {
+            background: linear-gradient(90deg, #0066ff, #00ff99);
+            box-shadow: 0 0 10px #00ff99;
+        }
+
+        .hero-section {
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #1b1b2f, #162447, #1f4068);
-            color: #fff;
-            overflow: hidden;
-        }
-
-        .login-container {
-            position: relative;
-            width: 350px;
-            padding: 40px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .login-container h2 {
             text-align: center;
+            background: url('https://source.unsplash.com/1600x900/?school') no-repeat center center/cover;
+        }
+
+        .hero-section h1 {
+            font-size: 60px;
             margin-bottom: 20px;
-            font-weight: 600;
-            color: #00d1ff;
+            text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
 
-        .login-container form {
-            display: flex;
-            flex-direction: column;
+        .hero-section p {
+            font-size: 20px;
+            margin-bottom: 30px;
+            text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
 
-        .login-container label {
-            font-size: 14px;
-            margin-bottom: 5px;
+        .hero-section a {
+            padding: 12px 30px;
+            border-radius: 30px;
+            background: linear-gradient(90deg, #00ff99, #0066ff);
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background 0.3s ease;
+        }
+
+        .hero-section a:hover {
+            background: linear-gradient(90deg, #0066ff, #00ff99);
+            box-shadow: 0 0 20px #00ff99;
+        }
+
+        .section {
+            padding: 100px 50px;
+            text-align: center;
+        }
+
+        .section h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #00ff99;
+        }
+
+        .section p {
+            font-size: 18px;
+            line-height: 1.6;
             color: #ccc;
         }
 
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 100%;
-            padding: 12px 20px;
-            margin-bottom: 20px;
-            border: none;
+        .cards {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .card {
+            width: 300px;
+            padding: 20px;
             border-radius: 10px;
-            outline: none;
-            background: rgba(255, 255, 255, 0.2);
-            color: #fff;
-            font-size: 16px;
-            transition: 0.3s ease;
-        }
-
-        .login-container input[type="text"]:focus,
-        .login-container input[type="password"]:focus {
-            background: rgba(255, 255, 255, 0.4);
-            box-shadow: 0 0 10px #00d1ff;
-        }
-
-        .login-container input[type="submit"] {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 10px;
-            background: linear-gradient(90deg, #00d1ff, #1f4068);
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: 0.3s ease;
-        }
-
-        .login-container input[type="submit"]:hover {
-            background: linear-gradient(90deg, #1f4068, #00d1ff);
-            box-shadow: 0 0 20px #00d1ff;
-        }
-
-        .floating-circles {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: -1;
-        }
-
-        .floating-circles span {
-            position: absolute;
-            display: block;
-            width: 20px;
-            height: 20px;
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            animation: float 8s infinite ease-in-out;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease;
         }
 
-        .floating-circles span:nth-child(1) {
-            left: 10%;
-            animation-duration: 6s;
+        .card:hover {
+            transform: translateY(-10px);
         }
 
-        .floating-circles span:nth-child(2) {
-            left: 30%;
-            animation-duration: 10s;
+        .card h3 {
+            margin-bottom: 10px;
+            font-size: 24px;
+            color: #00ff99;
         }
 
-        .floating-circles span:nth-child(3) {
-            left: 50%;
-            animation-duration: 8s;
+        .card p {
+            font-size: 16px;
+            color: #ccc;
         }
 
-        .floating-circles span:nth-child(4) {
-            left: 70%;
-            animation-duration: 12s;
+        footer {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            text-align: center;
+            color: #ccc;
+            position: relative;
         }
 
-        .floating-circles span:nth-child(5) {
-            left: 90%;
-            animation-duration: 7s;
+        footer p {
+            margin: 0;
         }
 
-        @keyframes float {
-            0% {
-                top: 100%;
-                transform: translateX(0);
-            }
-            50% {
-                transform: translateX(20px);
-            }
-            100% {
-                top: -10%;
-                transform: translateX(0);
-            }
+        footer a {
+            color: #00ff99;
+            text-decoration: none;
+            margin-left: 5px;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Futuristic Login</h2>
-        <form action="#" method="post">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">Future School</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#courses">Courses</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header-buttons">
+            <!-- Linking to admission.html -->
+            <a href="admission.html" class="admission-btn">Admission</a>
+            <!-- Linking to webpage.html -->
+            <a href="webpage.html" class="admission-btn">Login</a>
+        </div>
+    </header>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+    <!-- Hero Section -->
+    <section id="home" class="hero-section">
+        <div>
+            <h1>Welcome to Future School</h1>
+            <p>Empowering Young Minds with Knowledge & Innovation</p>
+            <a href="#about">Learn More</a>
+        </div>
+    </section>
 
-            <input type="submit" value="Login">
-        </form>
-    </div>
+    <!-- About Section -->
+    <section id="about" class="section">
+        <h2>About Us</h2>
+        <p>Future School is committed to providing a world-class education system for students. With state-of-the-art facilities, experienced faculty, and a dynamic curriculum, we aim to shape future leaders and innovators.</p>
+    </section>
 
-    <div class="floating-circles">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
+    <!-- Courses Section -->
+    <section id="courses" class="section">
+        <h2>Our Courses</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>Science</h3>
+                <p>Our science curriculum is designed to ignite curiosity and foster a love for exploration.</p>
+            </div>
+            <div class="card">
+                <h3>Arts</h3>
+                <p>Develop creativity and critical thinking with our wide range of arts courses.</p>
+            </div>
+            <div class="card">
+                <h3>Technology</h3>
+                <p>Stay ahead of the curve with courses in modern technology and innovation.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feel free to reach out to us. We're here to help!</p>
+        <p>Email: contact@futureschool.com | Phone: +91 9876543210</p>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 Future School. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
