--- a/index.html
+++ b/index.html
@@ -57,12 +57,7 @@
             color: #00ff99;
         }
 
-        .header-buttons {
-            display: flex;
-            gap: 15px;
-        }
-
-        .header-buttons a {
+        .admission-btn {
             padding: 10px 20px;
             border-radius: 20px;
             background: linear-gradient(90deg, #00ff99, #0066ff);
@@ -73,7 +68,7 @@
             transition: background 0.3s ease;
         }
 
-        .header-buttons a:hover {
+        .admission-btn:hover {
             background: linear-gradient(90deg, #0066ff, #00ff99);
             box-shadow: 0 0 10px #00ff99;
         }
@@ -193,12 +188,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="header-buttons">
-            <!-- Linking to admission.html -->
-            <a href="admission.html" class="admission-btn">Admission</a>
-            <!-- Linking to webpage.html -->
-            <a href="webpage.html" class="admission-btn">Login</a>
-        </div>
+        <!-- Linking to admission.html -->
+        <a href="addmission.html" class="admission-btn">Admission</a>
     </header>
 
     <!-- Hero Section -->
