new terms commit

--- a/addmission.html
+++ b/addmission.html
@@ -87,6 +87,23 @@
             box-shadow: 0 0 20px #00ff99;
         }
 
+        .terms-link {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            font-size: 14px;
+            color: #00ff99;
+        }
+
+        .terms-link a {
+            color: #00ff99;
+            text-decoration: none;
+        }
+
+        .terms-link a:hover {
+            text-decoration: underline;
+        }
+
         .floating-circles {
             position: absolute;
             top: 0;
@@ -196,6 +213,10 @@
 
             <input type="submit" value="Submit">
         </form>
+    </div>
+
+    <div class="terms-link">
+        <a href="terms.html" target="_blank">Terms and Conditions</a>
     </div>
 
     <div class="floating-circles">
